argo/services/copperforge/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copperforge
spec:
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: copperforge
          image: copperforge
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: copperforge-ghcr-pull-secret
