argo/services/copperforge/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: copperforge
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
