argo/services/copperforge/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copperforge
spec:
  ingressClassName: traefik
  rules:
    - host: copperforge.cindergla.de
      http:
        paths:
          - backend:
              service:
                name: copperforge
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - copperforge.cindergla.de
